--- a/tabela001.html
+++ b/tabela001.html
@@ -8,11 +8,13 @@
     <style>
         body{
             background-color: aquamarine;
+            font-family: Arial, Helvetica, sans-serif;
         }
 
         table{
             width: 400px;
             height: 200px;
+            border-collapse: collapse;
         }
 
         tr{
